# dataform-github-agent

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CURSOR_INTEGRATION.md  MCP_DOCUMENTATION.md  QUICK_START.md  README.md  RELEASES.md  TOOLS_REFERENCE.md  agent.py  api_server.py  config.py  create_repo.sh  mcp_server.py  pyproject.toml  requirements.txt  setup_and_push.sh
.github/workflows/: release.yml
data_engineering_copilot/: bigquery_tools.py  dataform_tools.py  dataproc_tools.py  dbt_tools.py
dataform_github_agent/: __init__.py  bigquery_tools.py  databricks_tools.py  dataform_tools.py  dataproc_tools.py  gcs_tools.py  github_tools.py
docs/: INSTALLATION.md  README.md
docs/api/: API_DOCUMENTATION.md
docs/examples/: EXAMPLES.md
docs/integration/: CURSOR_INTEGRATION.md
docs/mcp/: MCP_DOCUMENTATION.md
docs/reference/: CAPABILITIES.md  CHANGELOG.md  RELEASES.md  TOOLS_REFERENCE.md
scripts/: release.sh  setup_cursor.sh  start_api_server.sh  start_mcp_server.sh  update_remote_after_rename.sh
